# heron_robot

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  kingfisher_base.rosinstall  kingfisher_firmware.rosinstall  kingfisher_nmea.rosinstall  manifest.xml  package.xml  stack.xml
clearpath_ardiuno_sketch/clearpath_ardunio/: clearpath_ardunio.ino
clearpath_ardiuno_sketch/libraries/ros_lib/: ArduinoHardware.h
clearpath_ardiuno_sketch/libraries/ros_lib/diagnostic_msgs/: DiagnosticStatus.h  KeyValue.h  SelfTest.h
clearpath_ardiuno_sketch/libraries/ros_lib/geometry_msgs/: Point.h  Pose2D.h  PoseWithCovariance.h  Quaternion.h  TransformStamped.h  TwistWithCovariance.h  Vector3.h
clearpath_ardiuno_sketch/libraries/ros_lib/kingfisher_msgs/: Drive.h  Sense.h
clearpath_ardiuno_sketch/libraries/ros_lib/nav_msgs/: GetMap.h  GetPlan.h  MapMetaData.h  Odometry.h
clearpath_ardiuno_sketch/libraries/ros_lib/roscpp/: Empty.h  GetLoggers.h  Logger.h  SetLoggerLevel.h
clearpath_ardiuno_sketch/libraries/ros_lib/rosgraph_msgs/: Clock.h  Log.h
clearpath_ardiuno_sketch/libraries/ros_lib/rosserial_arduino/: Adc.h  Test.h
clearpath_ardiuno_sketch/libraries/ros_lib/rosserial_msgs/: Log.h  RequestParam.h  TopicInfo.h
clearpath_ardiuno_sketch/libraries/ros_lib/sensor_msgs/: CameraInfo.h  ChannelFloat32.h  CompressedImage.h  Image.h  Imu.h  JointState.h  JoyFeedback.h  NavSatFix.h  NavSatStatus.h  PointCloud2.h  PointField.h  Range.h  RegionOfInterest.h  SetCameraInfo.h
clearpath_ardiuno_sketch/libraries/ros_lib/std_msgs/: Byte.h  ByteMultiArray.h  Char.h  Duration.h  Float64.h  Float64MultiArray.h  Header.h  Int64.h  Int64MultiArray.h  MultiArrayDimension.h  MultiArrayLayout.h  String.h  Time.h  UInt16.h  UInt16MultiArray.h  UInt32.h  UInt32MultiArray.h  UInt8.h  UInt8MultiArray.h
clearpath_ardiuno_sketch/libraries/ros_lib/tf/: FrameGraph.h
clearpath_ardiuno_sketch/libraries/ros_lib/topic_tools/: MuxAdd.h  MuxDelete.h  MuxList.h  MuxSelect.h
heron_base/: CHANGELOG.rst  CMakeLists.txt  package.xml
heron_base/config/: imu_compass.yaml
heron_base/env-hooks/: 50.heron_find_controller_config.sh  50.heron_find_mag_config.sh
heron_base/launch/: base.launch  cal.launch
heron_base/scripts/: no_wireless_lights.py  snmp_lights.py
heron_bringup/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
heron_bringup/config/: camera.yaml  ffmv.yaml  imu_compass.yaml  ublox.hex
heron_bringup/launch/: accessories.launch
heron_bringup/launch/core/: camera.launch  controller.launch  ekf.launch  gps.launch  imu.launch  wireless.launch
heron_bringup/scripts/: calibrate_compass  calibration_write.sh  compute_calibration  install  navsat_rtk_relay  netserial  setup
heron_nmea/: CHANGELOG.rst  CMakeLists.txt  REFERENCE.md  package.xml  setup.py
heron_nmea/launch/: nav_test.launch  nmea_if.launch  test.launch
heron_nmea/nodes/: battery_publisher  command_publisher_old  gps_time_offset_publisher  imu_publisher  lights_publisher  nav_publisher  tt_publisher
heron_nmea/scripts/: install
heron_nmea/src/: command_publisher.cpp  sonar_publisher.cpp
heron_nmea/src/heron_nmea/: nmea_helpers.py
heron_nmea/src/kingfisher_nmea/: nmea_helpers.py  rpy_helpers.py
heron_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
kingfisher_bringup/: CHANGELOG.rst  CMakeLists.txt  README.md  app_manager.launch  camera.launch  interface.yaml  mainpage.dox  manifest.xml  minimal.launch  minimal_avr.launch  package.xml
kingfisher_bringup/apps/: kingfisher_apps.installed
kingfisher_bringup/config/: ekf.yaml  ffmv.yaml  imu_compass.yaml  ublox.hex
kingfisher_bringup/launch/core/: base.launch  camera.launch  controller.launch  ekf.launch  gps.launch  imu.launch  mcu.launch  sonar.launch  zeroconf.launch
kingfisher_bringup/launch/interface/: app_manager.launch  netserial.launch  sync.launch
kingfisher_bringup/nodes/: sync
kingfisher_bringup/scripts/: calibrate-compass  calibrate_compass  install
kingfisher_bringup/src/: bridge.py
kingfisher_bringup/src/vserial/: CMakeLists.txt  linux_serial.cpp  main.cpp  port.cpp  port.h  serial.h
kingfisher_bringup/udev/: 10-arduino.rules  10-pointgrey.rules  10-ublox.rules  41-clearpath.rules  41-sonar.rules
kingfisher_bringup/upstart/: helpers.bash  install.bash  kingfisher-start  kingfisher-stop  kingfisher.conf  kingfisher.launch  start  stop
kingfisher_msgs/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
kingfisher_msgs/msg/: Sense.msg
kingfisher_nmea/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
kingfisher_nmea/launch/: nav_test.launch  nmea_if.launch  test.launch
kingfisher_nmea/nodes/: battery_publisher  command_publisher  gps_time_offset_publisher  imu_publisher  nav.py  nav_publisher  tt_publisher
kingfisher_nmea/scripts/: install
kingfisher_nmea/src/: command_publisher.cpp
kingfisher_nmea/src/kingfisher_nmea/: rpy_helpers.py
kingfisher_node/: CMakeLists.txt  base.launch  mainpage.dox  manifest.xml
kingfisher_node/cfg/: Twist.cfg
kingfisher_node/nodes/: kingfisher.py  sonarmite.py  trial.py  wifi_monitor.py
kingfisher_node/src/kingfisher_node/: twist_subscriber.py
kingfisher_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
launch/: mjpeg.launch  nav_test.launch  nmea_if.launch  test.launch
launch/core/: gps.launch
nodes/: battery.py  commands.py  gps_time_offset.py  imu.py  nav.py  tt.py
scripts/: install.bash  simple_tester.py
src/: nmea_helpers.py  rpy_helpers.py
udev/: 41-ublox.rules
