<?xml version="1.0"?>
<package>
  <name>heron_nmea</name>
  <version>0.1.5</version>
  <description>The heron_nmea package</description>
  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>heron_msgs</build_depend>
  <build_depend>nmea_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>enu</run_depend>
  <run_depend>nmea_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nmea_comms</run_depend>
  <run_depend>heron_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>
