<?xml version="1.0"?>
<package>
  <name>kingfisher_nmea</name>
  <version>0.0.3</version>
  <description>The kingfisher_nmea package</description>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>enu</run_depend>
  <run_depend>nmea_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>kingfisher_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>
