<?xml version="1.0"?>
<package>
  <name>kingfisher_robot</name>
  <version>0.0.2</version>
  <description>Metapackage of what goes on the Kingfisher by default.</description>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>kingfisher_bringup</run_depend>
  <run_depend>kingfisher_controller</run_depend>
  <run_depend>kingfisher_firmware</run_depend>
  <run_depend>kingfisher_nmea</run_depend>
  <export>
    <metapackage/>
  </export>
</package>
